; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_deflate.c_deflate_decomp_init.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_deflate.c_deflate_decomp_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.deflate_ctx = type { %struct.z_stream_s }
%struct.z_stream_s = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@DEFLATE_DEF_WINBITS = common dso_local global i32 0, align 4
@Z_OK = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.deflate_ctx*, i32)* @deflate_decomp_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @deflate_decomp_init(%struct.deflate_ctx* %0, i32 %1) #0 {
  %3 = alloca %struct.deflate_ctx*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.z_stream_s*, align 8
  store %struct.deflate_ctx* %0, %struct.deflate_ctx** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %7 = load %struct.deflate_ctx*, %struct.deflate_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.deflate_ctx, %struct.deflate_ctx* %7, i32 0, i32 0
  store %struct.z_stream_s* %8, %struct.z_stream_s** %6, align 8
  %9 = call i32 (...) @zlib_inflate_workspacesize()
  %10 = call i32 @vzalloc(i32 %9)
  %11 = load %struct.z_stream_s*, %struct.z_stream_s** %6, align 8
  %12 = getelementptr inbounds %struct.z_stream_s, %struct.z_stream_s* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.z_stream_s*, %struct.z_stream_s** %6, align 8
  %14 = getelementptr inbounds %struct.z_stream_s, %struct.z_stream_s* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* @ENOMEM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %5, align 4
  br label %39

20:                                               ; preds = %2
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load %struct.z_stream_s*, %struct.z_stream_s** %6, align 8
  %25 = call i32 @zlib_inflateInit(%struct.z_stream_s* %24)
  store i32 %25, i32* %5, align 4
  br label %31

26:                                               ; preds = %20
  %27 = load %struct.z_stream_s*, %struct.z_stream_s** %6, align 8
  %28 = load i32, i32* @DEFLATE_DEF_WINBITS, align 4
  %29 = sub nsw i32 0, %28
  %30 = call i32 @zlib_inflateInit2(%struct.z_stream_s* %27, i32 %29)
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %26, %23
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* @Z_OK, align 4
  %34 = icmp ne i32 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %31
  %36 = load i32, i32* @EINVAL, align 4
  %37 = sub nsw i32 0, %36
  store i32 %37, i32* %5, align 4
  br label %41

38:                                               ; preds = %31
  br label %39

39:                                               ; preds = %41, %38, %17
  %40 = load i32, i32* %5, align 4
  ret i32 %40

41:                                               ; preds = %35
  %42 = load %struct.z_stream_s*, %struct.z_stream_s** %6, align 8
  %43 = getelementptr inbounds %struct.z_stream_s, %struct.z_stream_s* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @vfree(i32 %44)
  br label %39
}

declare dso_local i32 @vzalloc(i32) #1

declare dso_local i32 @zlib_inflate_workspacesize(...) #1

declare dso_local i32 @zlib_inflateInit(%struct.z_stream_s*) #1

declare dso_local i32 @zlib_inflateInit2(%struct.z_stream_s*, i32) #1

declare dso_local i32 @vfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
